src/objects/DD_254_WO_Joint__c.object
<CustomObject>
    <fields>
        <fullName>DD_254__c</fullName>
        <label>DD-254</label>
        <referenceTo>DD_254__c</referenceTo>
        <relationshipLabel>DD-254 WO Joints</relationshipLabel>
        <relationshipName>DD_254_WO_Joints1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Expired__c</fullName>
        <label>Date Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Expired_WF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order Expired WF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Expired__c</fullName>
        <formula>IF(ISPICKVAL(Work_Order__r.StageName,&quot;Inactive&quot;),TRUE,FALSE)</formula>
        <label>Work Order Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DD-254 WO Joints</relationshipLabel>
        <relationshipName>DD_254_WO_Joints1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DD-254 WO Joint</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>DD-254 WO Joint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DD-254 WO Joints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Clearance_Associate_matches_WO_Associate</fullName>
        <active>true</active>
        <errorConditionFormula>Work_Order__r.AccountId  &lt;&gt;  DD_254__r.Security_Clearance__r.Associate__r.AccountId</errorConditionFormula>
        <errorMessage>The work order must belong to the associate holding the security clearance.</errorMessage>
    </validationRules>
</CustomObject>